Implementing Examine configuration section

--- a/src/Examine.Config/Examine.Config.csproj
+++ b/src/Examine.Config/Examine.Config.csproj
@@ -14,4 +14,7 @@
     <RepositoryType>Git</RepositoryType>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
+  <ItemGroup>
+    <Reference Include="System.Configuration" />
+  </ItemGroup>
 </Project>
